--- a/src/main/java/za/co/wethinkcode/swingy/view/Continue.form
+++ b/src/main/java/za/co/wethinkcode/swingy/view/Continue.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="za.co.wethinkcode.swingy.view.continue_class">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="3" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="rootPanelContinue" layout-manager="GridLayoutManager" row-count="3" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -24,13 +24,13 @@
           <text value="Back"/>
         </properties>
       </component>
-      <component id="f9dec" class="javax.swing.JSpinner" binding="spinner1" default-binding="true">
+      <component id="f9dec" class="javax.swing.JSpinner" binding="selectSpinner">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
-      <component id="793f2" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
+      <component id="793f2" class="javax.swing.JTextArea" binding="savedGames">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="1" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
@@ -54,7 +54,7 @@
         </constraints>
         <properties>
           <font name="SansSerif" size="16"/>
-          <text value="Saved Games:"/>
+          <text value="Select a Saved Game:"/>
         </properties>
       </component>
     </children>
