--- a/src/main/java/za/co/wethinkcode/swingy/view/Battle.form
+++ b/src/main/java/za/co/wethinkcode/swingy/view/Battle.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="za.co.wethinkcode.swingy.view.battle">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="za.co.wethinkcode.swingy.view.Battle">
+  <grid id="27dc6" binding="rootPanelBattle" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="16001" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="16001" binding="enemyPanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -48,7 +48,7 @@
               <text value="Defence"/>
             </properties>
           </component>
-          <component id="795bc" class="javax.swing.JLabel">
+          <component id="795bc" class="javax.swing.JLabel" binding="enemyDefence">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -56,7 +56,7 @@
               <text value="20 "/>
             </properties>
           </component>
-          <component id="7216d" class="javax.swing.JLabel">
+          <component id="7216d" class="javax.swing.JLabel" binding="enemyAttack">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -64,7 +64,7 @@
               <text value="20 "/>
             </properties>
           </component>
-          <component id="e1574" class="javax.swing.JLabel">
+          <component id="e1574" class="javax.swing.JLabel" binding="enemyHealth">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -74,7 +74,7 @@
           </component>
         </children>
       </grid>
-      <grid id="13fdb" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="13fdb" binding="playerPanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="2" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -114,7 +114,7 @@
               <text value="Deffence"/>
             </properties>
           </component>
-          <component id="6142" class="javax.swing.JLabel">
+          <component id="6142" class="javax.swing.JLabel" binding="playerHealth">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -122,7 +122,7 @@
               <text value="20 Hp"/>
             </properties>
           </component>
-          <component id="a2718" class="javax.swing.JLabel">
+          <component id="a2718" class="javax.swing.JLabel" binding="playerAttack">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -130,7 +130,7 @@
               <text value="25"/>
             </properties>
           </component>
-          <component id="1c850" class="javax.swing.JLabel">
+          <component id="1c850" class="javax.swing.JLabel" binding="playerDefence">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -140,7 +140,7 @@
           </component>
         </children>
       </grid>
-      <grid id="e5787" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="e5787" binding="battlePanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -148,15 +148,17 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="73408" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
+          <component id="73408" class="javax.swing.JTextArea" binding="battleLog">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="50"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <text value=" "/>
+            </properties>
           </component>
-          <component id="e7479" class="javax.swing.JButton" binding="attackButton" default-binding="true">
+          <component id="e7479" class="javax.swing.JButton" binding="attackButton">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
