--- a/src/main/java/za/co/wethinkcode/swingy/view/Game.form
+++ b/src/main/java/za/co/wethinkcode/swingy/view/Game.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="za.co.wethinkcode.swingy.view.game_class">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="za.co.wethinkcode.swingy.view.Game">
+  <grid id="27dc6" binding="rootPanelGame" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="d4476" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="d4476" binding="leftPanel" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -16,12 +16,12 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="dee37" class="javax.swing.JButton" binding="nortButton" default-binding="true">
+          <component id="dee37" class="javax.swing.JButton" binding="northButton">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Nort"/>
+              <text value="North"/>
             </properties>
           </component>
           <component id="ad569" class="javax.swing.JButton" binding="southButton" default-binding="true">
@@ -48,7 +48,7 @@
               <text value="East"/>
             </properties>
           </component>
-          <grid id="3bc9b" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="3bc9b" binding="statsPanel" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -100,7 +100,7 @@
                   <text value="Armour"/>
                 </properties>
               </component>
-              <component id="d606b" class="javax.swing.JLabel">
+              <component id="d606b" class="javax.swing.JLabel" binding="xpLabel">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -108,7 +108,7 @@
                   <text value="18"/>
                 </properties>
               </component>
-              <component id="193bd" class="javax.swing.JLabel">
+              <component id="193bd" class="javax.swing.JLabel" binding="levelLabel">
                 <constraints>
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -116,7 +116,7 @@
                   <text value="1"/>
                 </properties>
               </component>
-              <component id="b2cef" class="javax.swing.JLabel">
+              <component id="b2cef" class="javax.swing.JLabel" binding="helmLabel">
                 <constraints>
                   <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -124,7 +124,7 @@
                   <text value="Metal Helm"/>
                 </properties>
               </component>
-              <component id="1254d" class="javax.swing.JLabel">
+              <component id="1254d" class="javax.swing.JLabel" binding="weaponLabel">
                 <constraints>
                   <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -132,7 +132,7 @@
                   <text value="Iron Sword"/>
                 </properties>
               </component>
-              <component id="b8af6" class="javax.swing.JLabel">
+              <component id="b8af6" class="javax.swing.JLabel" binding="armourLabel">
                 <constraints>
                   <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -144,7 +144,7 @@
           </grid>
         </children>
       </grid>
-      <component id="3a6e2" class="javax.swing.JTextPane" binding="textPane1" default-binding="true">
+      <component id="3a6e2" class="javax.swing.JTextPane" binding="gameplayLog">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
