--- a/src/main/java/za/co/wethinkcode/swingy/view/Start.form
+++ b/src/main/java/za/co/wethinkcode/swingy/view/Start.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="za.co.wethinkcode.swingy.view.Gui_class">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="za.co.wethinkcode.swingy.view.Start">
   <grid id="27dc6" binding="rootPanelStart" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -33,7 +33,7 @@
           </component>
         </children>
       </grid>
-      <component id="7c9a5" class="javax.swing.JLabel">
+      <component id="7c9a5" class="javax.swing.JLabel" binding="header">
         <constraints border-constraint="North"/>
         <properties>
           <font size="14"/>
