--- a/src/main/java/za/co/wethinkcode/swingy/view/Battle.form
+++ b/src/main/java/za/co/wethinkcode/swingy/view/Battle.form
@@ -16,7 +16,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="c7941" class="javax.swing.JLabel">
+          <component id="c7941" class="javax.swing.JLabel" binding="enemyType">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -140,7 +140,7 @@
           </component>
         </children>
       </grid>
-      <grid id="e5787" binding="battlePanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="e5787" binding="battlePanel" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -148,19 +148,9 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="73408" class="javax.swing.JTextArea" binding="battleLog">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value=" "/>
-            </properties>
-          </component>
           <component id="e7479" class="javax.swing.JButton" binding="attackButton">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Attack "/>
@@ -168,10 +158,46 @@
           </component>
           <component id="f8c1d" class="javax.swing.JButton" binding="fleeButton" default-binding="true">
             <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Flee"/>
+            </properties>
+          </component>
+          <component id="a4d4a" class="javax.swing.JButton" binding="okButton">
+            <constraints>
+              <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="OK"/>
+              <visible value="false"/>
+            </properties>
+          </component>
+          <scrollpane id="d504a">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="73408" class="javax.swing.JTextArea" binding="battleLog">
+                <constraints/>
+                <properties>
+                  <background color="-7615550"/>
+                  <editable value="false"/>
+                  <font name="Hiragino Kaku Gothic Pro"/>
+                  <text value=" "/>
+                </properties>
+              </component>
+            </children>
+          </scrollpane>
+          <component id="8f991" class="javax.swing.JButton" binding="continueButton" default-binding="true">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Continue"/>
+              <visible value="false"/>
             </properties>
           </component>
         </children>
